@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-07-26T12:37:51Z",
-  "count_outdated" : 4155,
-  "uniques_outdated" : 741,
+  "timestamp" : "2024-07-27T01:33:29Z",
+  "count_outdated" : 4157,
+  "uniques_outdated" : 742,
   "count" : 4214,
   "uniques" : 753,
   "views" : [
-    {
-      "timestamp": "2024-07-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-16T00:00:00Z",
       "count": 5,
