@@ -1,12 +1,7 @@
 {
-  "count": 59,
-  "uniques": 11,
+  "count": 57,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2024-07-12T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-07-16T00:00:00Z",
       "count": 5,
